--- a/app.json
+++ b/app.json
@@ -1,36 +1,57 @@
 {
   "expo": {
-    "name": "belsoft",
-    "slug": "belsoft",
+    "name": "CashPoint",
+    "slug": "cashpoint",
     "version": "1.0.0",
+    "description": "This is a My Interview Project",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./src/assets/images/icon.png",
     "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FFBC01",
+      "resizeMode": "cover"
     },
     "ios": {
       "supportsTablet": true
     },
+    "androidStatusBar": {
+      "backgroundColor": "#FFBC01",
+      "hidden": false
+    },
+    "backgroundColor": "#FFBC01",
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./src/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./src/assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "fcbab4de-47fa-4479-99d3-c574b9679dff"
+      }
+    },
+    "owner": "ebubechimdindu",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/fcbab4de-47fa-4479-99d3-c574b9679dff"
     }
   }
 }
